[tool.poetry]
name = "repl_python3_replit-testing"
version = "0.1.0"
description = ""
authors = ["tabwnymhmd <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium-wire = "^4.6.3"
Flask = "^2.1.2"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
